add new api get user by id
